--- a/app/src/main/res/layout/activity_actor_details.xml
+++ b/app/src/main/res/layout/activity_actor_details.xml
@@ -1,81 +1,125 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
->
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginStart="20dp" android:layout_marginEnd="20dp"
-            android:layout_marginTop="20dp" android:id="@+id/relative_layout_slider">
-
-        <android.support.v4.view.ViewPager
-                android:id="@+id/pager"
+    <data>
+        <variable
+                name="actor"
+                type="muhammadbahaa.actorbox.data.model.actor.ActorDetails"/>
+    </data>
+    <ScrollView android:layout_width="match_parent"
+                android:layout_height="match_parent">
+        <RelativeLayout
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentTop="true"/>
+                android:layout_height="match_parent">
 
-        <com.viewpagerindicator.CirclePageIndicator
-                android:id="@+id/indicator"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:gravity="bottom"
-                android:padding="10dip"
-                app:centered="true"
-                app:fillColor="#009688"
-                app:pageColor="#fff"
-                app:snap="false" android:layout_marginLeft="10dp"
-                android:layout_marginStart="20dp" android:layout_marginRight="10dp"
-                android:layout_marginEnd="20dp"/>
+            <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:layout_marginStart="20dp" android:layout_marginEnd="20dp"
+                    android:layout_marginTop="20dp" android:id="@+id/relative_layout_slider">
 
-    </RelativeLayout>
+                <android.support.v4.view.ViewPager
+                        android:id="@+id/pager"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentTop="true"/>
 
-    <TextView
-            android:text="Biography"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/text_view_biography_title"
-            android:layout_below="@id/relative_layout_slider" android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp" android:layout_marginStart="5dp" android:layout_marginRight="5dp"
-            android:layout_marginEnd="5dp" android:layout_marginBottom="5dp" android:textStyle="bold"
-            android:textSize="14sp"/>
-    <TextView
-            android:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/text_view_biography"
-            android:layout_below="@id/text_view_biography_title" android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp" android:layout_marginStart="5dp" android:layout_marginRight="5dp"
-            android:layout_marginEnd="5dp" android:layout_marginBottom="5dp"/>
-    <TextView
-            android:text="Place Of Birth"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/text_view_place_of_birth_title"
-            android:layout_below="@id/text_view_biography" android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp" android:layout_marginStart="5dp" android:layout_marginRight="5dp"
-            android:layout_marginEnd="5dp" android:layout_marginBottom="5dp" android:textStyle="bold"/>
-    <TextView
-            android:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/text_view_place_of_birth"
-            android:layout_below="@id/text_view_place_of_birth_title" android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp" android:layout_marginStart="5dp" android:layout_marginRight="5dp"
-            android:layout_marginEnd="5dp" android:layout_marginBottom="5dp"/>
-    <TextView
-            android:text="Birthday"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/text_view_birthday_title"
-            android:layout_below="@id/text_view_place_of_birth" android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp" android:layout_marginStart="5dp" android:layout_marginRight="5dp"
-            android:layout_marginEnd="5dp" android:layout_marginBottom="5dp" android:textStyle="bold"/>
-    <TextView
-            android:text="TextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/text_view_birthday"
-            android:layout_below="@id/text_view_birthday_title" android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp" android:layout_marginStart="5dp" android:layout_marginRight="5dp"
-            android:layout_marginEnd="5dp" android:layout_marginBottom="5dp"/>
-</RelativeLayout>
+                <com.viewpagerindicator.CirclePageIndicator
+                        android:id="@+id/indicator"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:layout_centerHorizontal="true"
+                        android:gravity="bottom"
+                        android:padding="10dip"
+                        app:centered="true"
+                        app:fillColor="#009688"
+                        app:pageColor="#fff"
+                        app:snap="false"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginEnd="20dp"/>
+
+            </RelativeLayout>
+
+            <TextView
+                    android:text="Biography"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/text_view_biography_title"
+                    android:layout_below="@id/relative_layout_slider"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:textStyle="bold"
+                    android:textSize="14sp"/>
+            <TextView
+                    android:text="@{actor.biography}"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/text_view_biography"
+                    android:layout_below="@id/text_view_biography_title"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="5dp"/>
+            <TextView
+                    android:text="Place Of Birth"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/text_view_place_of_birth_title"
+                    android:layout_below="@id/text_view_biography"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:textStyle="bold"/>
+            <TextView
+                    android:text="@{actor.place_of_birth}"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/text_view_place_of_birth"
+                    android:layout_below="@id/text_view_place_of_birth_title"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="5dp"/>
+            <TextView
+                    android:text="Birthday"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/text_view_birthday_title"
+                    android:layout_below="@id/text_view_place_of_birth"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:textStyle="bold"/>
+            <TextView
+                    android:text="@{actor.birthday}"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/text_view_birthday"
+                    android:layout_below="@id/text_view_birthday_title"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="5dp"/>
+        </RelativeLayout>
+    </ScrollView>
+</layout>
