--- a/app/src/main/res/layout/activity_actor.xml
+++ b/app/src/main/res/layout/activity_actor.xml
@@ -5,7 +5,7 @@
     <data>
     </data>
 
-    <android.support.constraint.ConstraintLayout
+    <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.actor.ActorActivity">
@@ -20,7 +20,27 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginLeft="40dp" android:layout_marginTop="20dp" android:layout_marginBottom="20dp"
-                android:layout_marginRight="40dp"/>
+                android:layout_marginRight="40dp"
+                android:layout_centerInParent="true">
 
-    </android.support.constraint.ConstraintLayout>
+        </android.support.v7.widget.RecyclerView>
+
+        <android.support.design.widget.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                app:srcCompat="@android:drawable/ic_menu_search"
+                android:id="@+id/search_button"
+                android:focusable="true"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginBottom="30dp"
+                app:backgroundTint="@color/colorPrimary"/>
+
+    </RelativeLayout>
 </layout>
